--- a/Notebook/01 Asset Management Basic/03 Characteristic of Financial Data.ipynb
+++ b/Notebook/01 Asset Management Basic/03 Characteristic of Financial Data.ipynb
@@ -2914,7 +2914,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "##### 4.2.6 forth moments (kurtosis)\n",
+    "##### 4.2.6 fourth moments (kurtosis)\n",
     "\n",
     "$$\\hat{K}(x) = \\frac{1}{(T-1)\\hat\\sigma_x^4}\\sum_{t=1}^T(x_t - \\hat\\mu_x)^4$$\n",
     "$$t = \\frac{\\hat K (r) - 3}{\\sqrt{24/T}}$$\n",
