--- a/Notebook/02 Financials, GICS Sectors/01 Financial Statement Data.ipynb
+++ b/Notebook/02 Financials, GICS Sectors/01 Financial Statement Data.ipynb
@@ -40,16 +40,328 @@
    "id": "4ed3cf8ac4efca22"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 1.1. DART\n",
+    "\n",
+    "한국의 상장기업 재무 데이터는 금융감독원이 운영하는 전자공시시스템(DART)을 통해 무료로 제공된다. OpenDART API는 기업의 사업보고서, 분기·반기보고서, 그리고 재무제표(XBRL 형식)를 손쉽게 수집할 수 있도록 설계되어 있으며, 회원가입을 통해 발급받은 API Key만 있으면 누구나 접근할 수 있다. 특히 삼성전자(005930)와 같은 특정 기업의 종목코드를 지정하고 보고서 유형(1분기, 반기, 3분기, 사업보고서)을 설정하면 해당 연도의 손익계산서, 재무상태표, 현금흐름표 데이터를 JSON 형태로 내려받을 수 있다. 이를 파이썬에서 `requests`와 `pandas` 라이브러리, 혹은 오픈소스 라이브러리인 `OpenDartReader`를 이용해 호출하고 DataFrame으로 변환하면, 학습자가 손쉽게 데이터를 가공·분석할 수 있다.  \n",
+    "\n",
+    "```bash\n",
+    "pip install opendartreader\n",
+    "```\n",
+    "\n",
+    "OpenDART API를 활용하면 DART 웹사이트에서 수동으로 보고서를 다운로드할 필요 없이 코드 한 줄로 구조화된 데이터를 얻을 수 있다는 장점이 있다. 다만, 공시 데이터는 공시 지연(latency)이 존재하며, XBRL 항목명을 정확히 이해해야 원하는 항목을 추출할 수 있다. 또한 API 호출에는 초당 요청 횟수 제한이 있기 때문에 대량의 기업 데이터를 수집할 경우 적절한 대기 시간을 두거나 데이터베이스에 순차적으로 적재하는 방식이 필요하다. 이러한 과정을 통해 한국 상장기업의 재무제표를 프로그래밍적으로 수집하고, 이를 바탕으로 재무 비율 계산, 기업 간 비교분석, 투자전략 수립 등의 실습을 체계적으로 진행할 수 있다.\n"
+   ],
+   "id": "6cbfd27d282982e7"
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-09-09T14:50:44.136888Z",
+     "start_time": "2025-09-09T14:50:42.126329Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import OpenDartReader\n",
+    "\n",
+    "with open('../../config/dart_api.key') as file : \n",
+    "    key = file.readline()\n",
+    "\n",
+    "dart = OpenDartReader(key)"
+   ],
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T14:51:53.290181Z",
+     "start_time": "2025-09-09T14:51:39.423994Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "dart.list('005930')",
+   "id": "b49390b93630a550",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     corp_code corp_name stock_code corp_cls                     report_nm  \\\n",
+       "0     00126380      삼성전자     005930        Y  최대주주등소유주식변동신고서                 \n",
+       "1     00126380      삼성전자     005930        Y             주식등의대량보유상황보고서(일반)   \n",
+       "2     00126380      삼성전자     005930        Y     대규모기업집단현황공시[분기별공시(대표회사용)]   \n",
+       "3     00126380      삼성전자     005930        Y           임원ㆍ주요주주특정증권등소유상황보고서   \n",
+       "4     00126380      삼성전자     005930        Y   지급수단별ㆍ지급기간별지급금액및분쟁조정기구에관한사항   \n",
+       "...        ...       ...        ...      ...                           ...   \n",
+       "6774  00126380      삼성전자     005930        Y                  채무보증(담보제공포함)   \n",
+       "6775  00126380      삼성전자     005930        Y                 최대주주등을위한금전의대여   \n",
+       "6776  00126380      삼성전자     005930        Y               감사보고서 (1999.12)   \n",
+       "6777  00126380      삼성전자     005930        Y         [기재정정]반기보고서 (1999.06)   \n",
+       "6778  00126380      삼성전자     005930        Y         [기재정정]사업보고서 (1998.12)   \n",
+       "\n",
+       "            rcept_no  flr_nm  rcept_dt rm  \n",
+       "0     20250905800573    삼성전자  20250905  유  \n",
+       "1     20250905000524    삼성물산  20250905     \n",
+       "2     20250901000065    삼성전자  20250901  공  \n",
+       "3     20250818000049     최병희  20250818     \n",
+       "4     20250814004256    삼성전자  20250814  공  \n",
+       "...              ...     ...       ... ..  \n",
+       "6774  20000404000429    삼성전자  20000404     \n",
+       "6775  20000401000031    삼성전자  20000401     \n",
+       "6776  20000320000124  삼일회계법인  20000320     \n",
+       "6777  19990824000003    삼성전자  19990824     \n",
+       "6778  19990626000007    삼성전자  19990626  연  \n",
+       "\n",
+       "[6779 rows x 9 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>corp_code</th>\n",
+       "      <th>corp_name</th>\n",
+       "      <th>stock_code</th>\n",
+       "      <th>corp_cls</th>\n",
+       "      <th>report_nm</th>\n",
+       "      <th>rcept_no</th>\n",
+       "      <th>flr_nm</th>\n",
+       "      <th>rcept_dt</th>\n",
+       "      <th>rm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>최대주주등소유주식변동신고서</td>\n",
+       "      <td>20250905800573</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>20250905</td>\n",
+       "      <td>유</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>주식등의대량보유상황보고서(일반)</td>\n",
+       "      <td>20250905000524</td>\n",
+       "      <td>삼성물산</td>\n",
+       "      <td>20250905</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>대규모기업집단현황공시[분기별공시(대표회사용)]</td>\n",
+       "      <td>20250901000065</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>20250901</td>\n",
+       "      <td>공</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>임원ㆍ주요주주특정증권등소유상황보고서</td>\n",
+       "      <td>20250818000049</td>\n",
+       "      <td>최병희</td>\n",
+       "      <td>20250818</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>지급수단별ㆍ지급기간별지급금액및분쟁조정기구에관한사항</td>\n",
+       "      <td>20250814004256</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>20250814</td>\n",
+       "      <td>공</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6774</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>채무보증(담보제공포함)</td>\n",
+       "      <td>20000404000429</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>20000404</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6775</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>최대주주등을위한금전의대여</td>\n",
+       "      <td>20000401000031</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>20000401</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6776</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>감사보고서 (1999.12)</td>\n",
+       "      <td>20000320000124</td>\n",
+       "      <td>삼일회계법인</td>\n",
+       "      <td>20000320</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6777</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[기재정정]반기보고서 (1999.06)</td>\n",
+       "      <td>19990824000003</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>19990824</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6778</th>\n",
+       "      <td>00126380</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>005930</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[기재정정]사업보고서 (1998.12)</td>\n",
+       "      <td>19990626000007</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>19990626</td>\n",
+       "      <td>연</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6779 rows × 9 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 1.2 EDGAR\n",
+    "\n",
+    "미국 상장기업의 재무 데이터는 SEC(미국 증권거래위원회)가 운영하는 EDGAR(Electronic Data Gathering, Analysis, and Retrieval) 시스템을 통해 무료로 제공된다. EDGAR에는 모든 상장기업이 의무적으로 제출하는 10-K(연차보고서), 10-Q(분기보고서), 8-K(주요 사건 공시) 등의 자료가 축적되어 있으며, 최근에는 XBRL(Extensible Business Reporting Language) 형식으로 구조화된 재무제표 데이터를 제공하고 있다. 이를 통해 **손익계산서, 재무상태표, 현금흐름표** 와 같은 핵심 정보를 기계적으로 수집하고 분석할 수 있다.  \n",
+    "\n",
+    "EDGAR는 한국의 DART와 달리 API Key 발급 절차 없이 누구나 접근할 수 있지만, SEC는 이용자 식별을 위해 User-Agent 헤더에 애플리케이션 이름과 이메일 주소를 반드시 포함하도록 규정하고 있다. 또한 방대한 데이터가 JSON 형식으로 제공되기 때문에 파이썬의 `requests`와 `pandas`를 활용하면 손쉽게 DataFrame 형태로 변환할 수 있다. 다만, 데이터 항목명이 XBRL 표준을 따르기 때문에 원하는 항목을 정확히 지정해야 하고, 분기와 연간 보고서를 구분하기 위해 제출 문서 종류(10-K, 10-Q)를 필터링하는 과정이 필요하다. 이러한 절차를 거치면 EDGAR를 활용해 애플(AAPL)과 같은 글로벌 기업의 재무 데이터를 정량적으로 분석할 수 있다."
+   ],
+   "id": "122165b105ab67df"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-09T15:26:34.634920Z",
+     "start_time": "2025-09-09T15:26:34.625602Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "from time import sleep\n",
+    "\n",
+    "HEADERS = {\n",
+    "    \"User-Agent\": \"Thomas Lee (junghun1013@icloud.com)\"\n",
+    "} # 필수로 등록 필요\n",
+    "\n",
+    "# AAPL CIK \n",
+    "CIK = \"0000320193\" \n",
+    "\n",
+    "BASE = \"https://data.sec.gov/api/xbrl/companyconcept\""
+   ],
+   "id": "30624dbd52314e3a",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def fetch_concept_df(cik: str, taxonomy: str, concept: str, unit: str = \"USD\") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    EDGAR companyconcept API에서 특정 XBRL 항목을 DataFrame으로 반환.\n",
+    "    \"\"\"\n",
+    "    url = f\"{BASE}/CIK{cik}/{taxonomy}/{concept}.json\"\n",
+    "    r = requests.get(url, headers=HEADERS, timeout=30)\n",
+    "    r.raise_for_status()\n",
+    "    j = r.json()\n",
+    "\n",
+    "    # 단위(unit)별 시계열 중 USD만 사용 \n",
+    "    vals = j[\"units\"][unit]\n",
+    "    df = pd.DataFrame(vals)\n",
+    "\n",
+    "    # end/val/form/fy/fp 등 컬럼 정리\n",
+    "    if \"end\" in df.columns:\n",
+    "        df[\"end\"] = pd.to_datetime(df[\"end\"])\n",
+    "    if \"filed\" in df.columns:\n",
+    "        df[\"filed\"] = pd.to_datetime(df[\"filed\"])\n",
+    "\n",
+    "    df.rename(columns={\"val\": concept}, inplace=True)\n",
+    "    return df\n"
+   ],
+   "id": "2e3003e168897084"
   }
  ],
  "metadata": {
