--- a/Notebook/02 Financials, GICS Sectors/01 Financial Statement Data.ipynb
+++ b/Notebook/02 Financials, GICS Sectors/01 Financial Statement Data.ipynb
@@ -362,6 +362,173 @@
     "    return df\n"
    ],
    "id": "2e3003e168897084"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Fundamental Statement Data\n",
+    "\n",
+    "재무제표는 기업을 수치로 “읽는” 기본 도구로서 손익계산서(Income Statement), 대차대조표(Balance Sheet), 현금흐름표(Cash Flow Statement) 세 축으로 구성되어 기업의 수익성·재무건전성·현금창출력을 각각 다른 관점에서 제공한다. "
+   ],
+   "id": "116da989d02ed680"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6595635ee97bbf5e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.1 Income Satetment\n",
+    "\n",
+    "손익계산서는 일정 기간(분기·연간)의 수익·비용·이익을 기록하여 영업성과의 동학을 보여준다. 매출(Revenue)에서 출발해 매출원가(COGS)를 제외한 매출총이익(Gross Profit), 판매관리비·R&D를 반영한 영업이익(Operating Income / EBIT), 감가상각·상각(D&A)을 제외·포함한 항목, 이자·법인세를 적용한 당기순이익(Net Income)에 이르기까지 단계별로 마진 구조와 수익성 드라이버를 진단할 수 있다. 특히 영업이익은 본업의 수익력을, 영업외·비반복 항목은 일시적 사건(자산매각·구조조정 등)을 나타내므로 영속적 이익과 분리해 분석해야 한다."
+   ],
+   "id": "b4ad655740a86338"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bb4e22ea0acec860"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.2 Balance Sheet\n",
+    "\n",
+    "대차대조표는 특정 시점의 자산·부채·자본을 보여주어 재무구조와 유동성의 스냅샷을 제공한다. 유동자산(현금·단기투자·매출채권·재고)은 단기지급능력을, 유동부채(매입채무·단기차입)는 단기지급의무를 나타내며 이를 통해 유동비율·당좌비율 같은 유동성 지표를 계산한다. 비유동자산(유형자산·무형자산·장기투자)은 장기 성장능력·감가정책을 반영하고, 총부채·순부채(총부채 − 현금)는 레버리지·자본구조 판단의 핵심이다. 또한 자본(Shareholders’ Equity)은 납입자본·이익잉여금·기타포괄손익누계액 등으로 구성되어 장부가치(Book Value)의 근거가 되며, 회계적 처리(공정가치 평가, 연결범위, 리스회계 등)에 따라 장부가치의 경제적 의미가 달라질 수 있으므로 주석(Notes)을 반드시 확인해야 한다."
+   ],
+   "id": "dc40bf4b233393ad"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "69191fd7e4d944fc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.3 Cash Flow\n",
+    "\n",
+    "현금흐름표는 기업의 ‘현금’이라는 실체를 보여주며 세 영역으로 나뉜다. 영업활동현금흐름(CFO)은 영업에서 실제 생성된 현금으로 배당·부채상환·재투자 여력을 직접적으로 말해준다. 투자활동현금흐름은 CapEx(설비투자)·사업인수·유가증권 매입 등을 통해 성장투자 규모를 보여주며, 재무활동현금흐름은 차입·상환·주주환원(배당·자사주) 등 자본정책을 반영한다. 잉여현금흐름(FCF = CFO − CapEx)은 기업의 진짜 ‘잉여’ 현금창출력을 나타내어 배당지속성·부채감축능력을 평가하는 데 핵심적이다. 실무에서는 비현금 항목(감가상각·충당금), 운전자본 변화, 일회성 현금흐름을 분리·조정하여 지속적 현금창출능력을 추정한다.\n",
+    "실제 분석에서는 (1) 기간 일관성(LTM vs FY vs Forward), (2) 희석 여부(Diluted vs Basic), (3) 회계조정(일회성·소송·정상화), (4) 연결범위(Consolidated vs Parent-only), (5) 오프밸런스 항목(리스·파생·우발채무) 등을 점검해야 한다. 연구·백테스트 목적이라면 재분류(reclassification)와 회계정책 변경 이력도 반영하여 시계열의 불연속성이 결과를 왜곡하지 않도록 관리해야 한다."
+   ],
+   "id": "29f9fa2b9fc84a20"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bf6e9c6a2e129ee0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 3. Additional Information\n",
+    "\n",
+    "정기공시의 주석 비중, 인수·합병 관련 공시, 배당정책의 변화, 손상 등은 서로 다른 형태의 정보이지만 하나의 공통된 역할을 한다. 재무제표가 보여주는 결과 뒤에 숨은 불확실성의 원인과 향후 현금흐름·재무구조의 변화 가능성을 드러낼 수도 있고, 계량화가 미쳐 되지 않는 정보들이 산재해 있기 때문이다. 전체 공시에서 주석이 길어지면 설명해야 할 불확실성이 커졌을 가능성이 있고, M&A 공시는 자금조달·희석·통합리스크를 즉각적으로 바꿀 수 있으며, 배당 축소는 현금압박 또는 우선순위 변경을 암시하고, 대규모 손상은 장기적 수익성·자산가치의 재평가를 의미한다.\n",
+    "\n",
+    "따라서 이들 신호는 개별적으로도 유용하지만 서로 결합해서 해석할 때 더 강한 사전경고(pre-event) 신호를 준다. 다만 정상적 사업확장(예: 합병 관련 주석 증가)처럼 합리적 원인도 있으므로 절대값보다 섹터·히스토리 대비 상대적 변동을 보고, 정량지표(유동성·CFO·부채만기)와 교차검증하여 보조신호로 활용해야 실무적 효용을 얻는다."
+   ],
+   "id": "e9de59f25fa43d02"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9f396a2c79c3fe6a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.1 Footnote Ratio\n",
+    "\n",
+    "기업이 제출하는 정기공시의 주석의 길이는 재무제표의 숫자가 표현하지 못하는 위험을 추정하는 지표가 될 수 있다. 리스크를 본표(손익·대차·현금흐름)가 ‘무엇이’ 발생했는지를 보여준다면, 주석과 특별공시는 ‘왜’와 ‘어떻게’가 쓰여 있는 곳이다. 주석의 분량 자체가 증가하거나 재무관련 주석이 대차대조표 대비 비중 있게 늘어나는 현상은 경영진이 투자자·채권자·감독당국에 대해 설명해야 할 사안이 많아졌음을 시사한다. 설명해야 할 사안이 많다는 것은 단순히 기업활동이 복잡해졌다는 의미일 수도 있지만, 동시에 우발채무·복잡한 파생계약·회계정책의 변화 등으로 인해 미래 현금흐름과 리스크 프로필이 불확실해졌을 가능성을 내포한다. 따라서 주석 비중은 ‘불확실성의 양적 표지’로서 빠른 스크리닝 신호 역할을 할 수 있다."
+   ],
+   "id": "cd854b5aa9685a7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "367027828bbc0c03"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.2 M&A\n",
+    "\n",
+    "인수·합병(M&A) 관련 공시는 기업의 재무·경영 구조를 단기간에 크게 재편할 수 있는 이벤트이므로 특히 중요하다. 합병·인수는 인수대금의 조달 방식(현금·주식·채무), 거래규모(시가총액 대비 비율), 거래대상(유·무형자산 포함), 시너지만큼이나 통합 실패 리스크를 동반한다. \n",
+    "\n",
+    "주주총회 소집공고나 LOI·계약서 공시 등은 거래 성사 가능성의 선행 신호이므로, 공시에서 해당 문구가 등장하는 순간부터 자금흐름·부채만기·희석 가능성 등을 재평가해야 한다. 특히 현금성 대금 비중이 높고 회사의 유동성 여건이 약하면 단기적 유동성 압박과 신용리스크가 커질 수 있다."
+   ],
+   "id": "691a55ce1b10ea86"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3059b0a5ca0da737"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.3 Dividend\n",
+    "\n",
+    "배당정책의 변화는 기업의 자본배분과 현금흐름의 신뢰도를 직접 보여주는 지표다. 배당 감액·중단 또는 특별배당의 발표는 그 자체가 경영진의 현금 여력 판단과 전략적 우선순위의 신호이다. 감액배당은 자주 현금압박·수익성 악화·미래 투자 우선순위 변경의 전조이며, 반대로 예기치 않은 특별배당은 잉여현금의 일시적 출구를 의미한다. 특히 배당정책 변화는 소유구조(대주주 성향), 세제 변화, 규제 리스크와도 얽혀 있어 공시 문맥을 통해 그 배경을 해석해야만 경제적 의미를 올바르게 이해할 수 있다."
+   ],
+   "id": "bb0700c1f28a86da"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "fc92b0dba2ef2777"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.4 Impairment\n",
+    "\n",
+    "손상(impairment)은 회계상의 조정에 그치지 않고 기업의 장기 현금창출력과 자산가치의 재평가를 의미한다. 대규모 영업권·무형자산 손상이나 감액 공시는 해당 사업부의 장기적 수익성 악화 또는 미래현금흐름 예측의 하향을 반영한다. 손상은 종종 경영진의 전략적 실수, 시장구조의 변화, 기술적 진부화, 또는 경기후퇴의 결과로 나타나며, 손상 공시 직후에는 이익의 질과 이후 현금흐름 복원 가능성에 대한 재평가가 필요하다. 또한 손상은 회계 시점의 판단이 개입되는 항목이므로 주석에 적혀 있는 가정(할인율, 성장률, 영업단위 정의 등)을 반드시 검토해야 한다."
+   ],
+   "id": "8fda039fdefafe6c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "579144f5c5e06655"
   }
  ],
  "metadata": {
