--- a/Notebook/02 Financials, GICS Sectors/03 Sectors and Industry.ipynb
+++ b/Notebook/02 Financials, GICS Sectors/03 Sectors and Industry.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "금융시장에서 섹터(Sector)와 업종(Industry / Sub-Industry)은 자산을 구조적으로 이해하고 포트폴리오를 설계하는 기본 단위다. 글로벌 표준인 GICS(산업분류체계)는 큰 범주의 Sector → Industry Group → Industry → Sub-Industry 계층을 제공하여 동일한 경제적 활동을 하는 기업들을 묶어주며, 한국시장에서는 KRX의 섹터 분류가 GICS 섹터의 분류를 참고하여 제작되었는데, 로컬 산업구조와 정책·규제 특성을 더 잘 반영하는 경우가 있어 연구 목적에 따라 둘을 병행해 사용한다. \n",
     "\n",
-    "한편 테마(Theme) 투자는 기술(예: AI), 환경(ESG), 공급망 같은 횡단적 주제에 따라 섹터·업종 경계를 넘어선 노출을 구성하므로 이벤트 드리븐 전략에서 자주 활용한다. 포트폴리오 집계 방식에서는 동일가중(Equal-weighted)이 대형주 집중을 완화해 섹터 내 분산효과를 키우지만 재조정(리밸런싱) 비용과 회전율이 커지는 반면, 시가총액가중(Market-weighted)은 시가총액에 비례해 시장노출을 자연스럽게 반영하고 거래비용이 낮아 인덱스 추종에 적합하다. 따라서 실무와 연구에서는 (1) 사용하려는 분류체계(GICS vs KRX), (2) 테마의 정의 및 구성 규칙, (3) 가중치 방식(Equal vs Market), (4) 리밸런싱 빈도·거래비용·유동성 제약을 함께 고려해 실험설계와 해석을 일관되게 맞추는 것이 중요하다.\n",
+    "한편 테마(Theme) 투자는 기술(예: AI), 환경(ESG), 공급망 같은 횡단적 주제에 따라 섹터·업종 경계를 넘어선 노출을 구성하므로 이벤트 드리븐 전략에서 자주 활용한다. 포트폴리오 집계 방식에서는 동일가중(Equal-weighted)이 대형주 집중을 완화해 섹터 내 분산효과를 키우지만 리밸런싱 비용과 회전율이 커지는 반면, 시가총액가중(Market-weighted)은 시가총액에 비례해 시장노출을 자연스럽게 반영하고 거래비용이 낮아 인덱스 추종에 적합하다. 따라서 실무와 연구에서는 (1) 사용하려는 분류체계(GICS vs KRX), (2) 테마의 정의 및 구성 규칙, (3) 가중치 방식(Equal vs Market), (4) 리밸런싱 빈도·거래비용·유동성 제약을 함께 고려해 실험설계와 해석을 일관되게 맞추는 것이 중요하다.\n",
     "\n",
     "이번 장에서는 섹터의 종류와 특성을 이해하는 것을 목표로 한다."
    ],
@@ -49,7 +49,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": "\n"
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
